[gd_scene load_steps=29 format=2]

[ext_resource path="res://player/animations/shoot/Player0019.png" type="Texture" id=1]
[ext_resource path="res://player/animations/shoot/Player0020.png" type="Texture" id=2]
[ext_resource path="res://player/animations/aim/Player0005.png" type="Texture" id=3]
[ext_resource path="res://player/animations/aim/Player0006.png" type="Texture" id=4]
[ext_resource path="res://player/animations/aim/Player0007.png" type="Texture" id=5]
[ext_resource path="res://player/animations/aim/Player0008.png" type="Texture" id=6]
[ext_resource path="res://player/animations/aim/Player0009.png" type="Texture" id=7]
[ext_resource path="res://player/animations/aim/Player0012.png" type="Texture" id=8]
[ext_resource path="res://player/animations/aim/Player0011.png" type="Texture" id=9]
[ext_resource path="res://player/animations/aim/Player0013.png" type="Texture" id=10]
[ext_resource path="res://player/animations/aim/Player0015.png" type="Texture" id=11]
[ext_resource path="res://player/animations/aim/Player0014.png" type="Texture" id=12]
[ext_resource path="res://player/animations/aim/Player0016.png" type="Texture" id=13]
[ext_resource path="res://player/animations/shoot/Player0018.png" type="Texture" id=14]
[ext_resource path="res://player/animations/shoot/Player0017.png" type="Texture" id=15]
[ext_resource path="res://player/animations/shoot/Player0022.png" type="Texture" id=16]
[ext_resource path="res://player/animations/shoot/Player0024.png" type="Texture" id=17]
[ext_resource path="res://player/animations/shoot/Player0023.png" type="Texture" id=18]
[ext_resource path="res://player/animations/shoot/Player0025.png" type="Texture" id=19]
[ext_resource path="res://player/animations/aim/Player0003.png" type="Texture" id=20]
[ext_resource path="res://player/animations/aim/Player0010.png" type="Texture" id=21]
[ext_resource path="res://player/animations/aim/Player0001.png" type="Texture" id=22]
[ext_resource path="res://player/animations/aim/Player0002.png" type="Texture" id=23]
[ext_resource path="res://player/animations/aim/Player0004.png" type="Texture" id=24]
[ext_resource path="res://player/player.gd" type="Script" id=25]
[ext_resource path="res://player/base.tscn" type="PackedScene" id=26]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "shoot",
"speed": 24.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 21 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "aim",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 10 )

[node name="player" type="Node2D"]
script = ExtResource( 25 )

[node name="shooter" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "aim"

[node name="nozzle" type="Position2D" parent="shooter"]
position = Vector2( 0, -115 )

[node name="base" parent="." instance=ExtResource( 26 )]
position = Vector2( -320, 0 )

[node name="base2" parent="." instance=ExtResource( 26 )]
position = Vector2( -240, 0 )

[node name="base3" parent="." instance=ExtResource( 26 )]
position = Vector2( -160, 0 )

[node name="base4" parent="." instance=ExtResource( 26 )]
position = Vector2( -80, 0 )

[node name="base5" parent="." instance=ExtResource( 26 )]

[node name="base6" parent="." instance=ExtResource( 26 )]
position = Vector2( 80, 0 )

[node name="base7" parent="." instance=ExtResource( 26 )]
position = Vector2( 160, 0 )

[node name="base8" parent="." instance=ExtResource( 26 )]
position = Vector2( 240, 0 )

[node name="base9" parent="." instance=ExtResource( 26 )]
position = Vector2( 320, 0 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 30 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Area2D"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -359.565, -8.58318, 361.573, -7.91975, 361.573, 10.656, -360.228, 10.656 )

[node name="weaponTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="presentationTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="shooter" to="." method="_on_shooter_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="weaponTimer" to="." method="_on_weaponTimer_timeout"]
[connection signal="timeout" from="presentationTimer" to="." method="_on_presentationTimer_timeout"]
